--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 		        </div>
           </div>
           <div class="col-md-8 block-9 mb-md-5">
-            <form action="#" class="bg-light p-5 contact-form">
+            <form action="https://formsubmit.co/nadeeshaire@gmail.com" method="POST" class="bg-light p-5 contact-form">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
@@ -248,7 +248,7 @@
         </div>
         <div class="row justify-content-center">
         	<div class="col-md-12">
-        		<div id="map" class="bg-white"></div>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5124.013983602357!2d15.546465082547888!3d38.18589095074011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13144e7ce7693531%3A0x832c8a0c77e763b9!2sPiazza%20Francesco%20Lo%20Sardo%2C%2009%2C%2098100%20Messina%20ME%2C%20Italy!5e0!3m2!1sen!2ssg!4v1632205028958!5m2!1sen!2ssg"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         	</div>
         </div>
       </div>
@@ -280,7 +280,6 @@
       
         <div class="row">
           <div class="col-md-12 text-center belowLink">
-
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | developed by <a href="https://ovitlab.com" target="_blank">OvitLab</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
@@ -309,8 +308,6 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="js/google-map.js"></script>
-  <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4wMBEC_IGpWYQ69NrP8s60V92v2XMflE&callback=initMap" async defer></script>
   <script src="js/main.js"></script>
     
   </body>
