creating contact form

--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
 		        </div>
           </div>
           <div class="col-md-8 block-9 mb-md-5">
-            <form action="https://formsubmit.co/nadeeshaire@gmail.com" method="POST" class="bg-light p-5 contact-form">
+            <form action="https://api.web3forms.com/submit" method="POST" class="bg-light p-5 contact-form">
+              <input type="hidden" name="apikey" value="979214f4-658f-4790-a262-9607a02c6719">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
