adding contact code

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
               <div class="form-group">
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
+              <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <div class="form-group">
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
               </div>
