--- a/index.html
+++ b/index.html
@@ -230,20 +230,20 @@
             <form action="https://api.web3forms.com/submit" method="POST" class="bg-light p-5 contact-form">
               <input type="hidden" name="apikey" value="979214f4-658f-4790-a262-9607a02c6719">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Your Name" name="name" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
+                <input type="email" class="form-control" placeholder="Your Email" name="email" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Phone Number">
+                <input type="text" class="form-control" placeholder="Phone Number" name="phoneNumber">
               </div>
               <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message" name="message"></textarea>
               </div>
               <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="submit"  class="btn btn-primary py-3 px-5">
               </div>
             </form>
           </div>
