--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <input type="text" class="form-control" placeholder="Phone Number" name="phoneNumber">
               </div>
               <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message" name="message"></textarea>
+                <textarea cols="30" rows="7" class="form-control" placeholder="Message" name="message"></textarea>
               </div>
               <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <div class="form-group">
