--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
                 <input type="email" class="form-control" placeholder="Your Email" name="email" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Phone Number" name="phoneNumber">
+                <input type="text" class="form-control" placeholder="Phone Number" name="Phone Number" required>
               </div>
               <div class="form-group">
-                <textarea cols="30" rows="7" class="form-control" placeholder="Message" name="message"></textarea>
+                <textarea cols="30" rows="7" class="form-control" placeholder="Message" name="message" required></textarea>
               </div>
               <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <div class="form-group">
