--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-envelope-o"></span>
 			          	</div>
-			            <p><span class="lang" key="s5s4">Email:</span> <a href="pramoda077@hotmail.com"> pramoda077@hotmail.com</a></p>
+			            <p><span class="lang" key="s5s4">Email:</span> <a> pramoda077@hotmail.com</a></p>
 			          </div>
 		          </div>
 		        </div>
@@ -315,5 +315,6 @@
   <script src="js/translater.js"></script>
   </body>
 </html>
+
 
 
